--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ behavioral/simplefactory/cmake-build-release/CMakeFiles/
 Creational/simplefactory/cmake-build-release/CMakeFiles/
 
 Creational/simplefactory/cmake-build-release/
+
+Creational/factorymethod/cmake-build-debug/
+
+Creational/factorymethod/cmake-build-release/
