--- a/Creational/factorymethod/CMakeLists.txt
+++ b/Creational/factorymethod/CMakeLists.txt
@@ -5,4 +5,4 @@ set(CMAKE_CXX_STANDARD 14)
 
 include_directories(.)
 
-add_executable(factory_method Video.h main.cpp)
+add_executable(factory_method MyProject-2.cpp)
