--- a/DesignPatterns/AbstractFactory/CMakeLists.txt
+++ b/DesignPatterns/AbstractFactory/CMakeLists.txt
@@ -5,4 +5,4 @@ set(CMAKE_CXX_STANDARD 14)
 
 include_directories(.)
 
-add_executable(factory_method  MyProject-2.cpp)
+add_executable(factory_method  不使用模式.cpp)
